Fixed content alignment

--- a/hfoote.css
+++ b/hfoote.css
@@ -109,7 +109,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	max-width: 800px;
-	align-self: center;
+	align-items: center;
 }
 
 .page p {
